feat: 🎸 game end screen

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -38,6 +38,10 @@
     <element-overlay></element-overlay>
   </div>
 
+  <div class="game-menu">
+    <element-game-menu></element-game-menu>
+  </div>
+
   <div class="guide">
     <element-guide></element-guide>
   </div>
