feat: 🎸 add gradient color to SSA & BB bar

--- a/src/app/widgets/elements/timeout/timeout.component.html
+++ b/src/app/widgets/elements/timeout/timeout.component.html
@@ -1,9 +1,16 @@
 <div *ngIf="attributes && attributes.visibility === 'visible'" class="timer row">
-  <div *ngIf="state.bars && state.bars[0]" class="first col p-0 position-relative">
+
+  <!-- Assumption: there'll be only one gradient bar at a time. -->
+  <div *ngIf="state.isGradient" class="first col p-0 position-relative">
+    <div class="position-absolute start-0" [ngStyle]="{ 'background': gradientColor(state.startColor, state.endColor) }"
+      [@timeOut]="{value:'', params:{duration : state.timeout}}" #timer></div>
+  </div>
+
+  <div *ngIf="!state.isGradient && state.bars && state.bars[0]" class="first col p-0 position-relative">
     <div class="position-absolute start-0" [ngStyle]="{ 'background-color': colors[state.bars[0]] }"
       [@timeOut]="{value:'', params:{duration : state.timeout}}" #timer></div>
   </div>
-  <div *ngIf="state.bars && state.bars[1]" class="second col p-0 position-relative">
+  <div *ngIf="!state.isGradient && state.bars && state.bars[1]" class="second col p-0 position-relative">
     <div class="position-absolute end-0" [ngStyle]="{ 'background-color': colors[state.bars[1]] }"
       [@timeOut]="{value:'', params:{duration : state.timeout}}" #timer></div>
   </div>
