feat: 🎸 add badge popup element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -50,6 +50,10 @@
     <element-confetti></element-confetti>
   </div>
 
+  <div class="badge-popup">
+    <element-badge-popup></element-badge-popup>
+  </div>
+
   <div>
     <element-toast></element-toast>
   </div>
