feat: 🎸 add clinical score element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -54,6 +54,10 @@
     <element-badge-popup></element-badge-popup>
   </div>
 
+  <div class="clinical-score">
+    <element-clinical-score></element-clinical-score>
+  </div>
+
   <div>
     <element-toast></element-toast>
   </div>
