feat: 🎸 unlocked goal/badge notification element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -1,4 +1,7 @@
 <div class="elements">
+  <div class="unlock-notification">
+    <element-unlock-notification></element-unlock-notification>
+  </div>
   <!-- {{ state | json }} -->
   <div class="calibration-tutorial" [class.show]="showCalibrationTutorial">
     <element-calibration-tutorial (onHide)="showCalibrationTutorial = false"></element-calibration-tutorial>
