feat: 🎸 goal selection and completion elements

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -1,4 +1,10 @@
 <div class="elements">
+  <div class="title-bar">
+    <element-title-bar></element-title-bar>
+  </div>
+  <div class="goal-selection">
+    <element-goal-selection></element-goal-selection>
+  </div>
   <div class="unlock-notification">
     <element-unlock-notification></element-unlock-notification>
   </div>
