--- a/src/app/widgets/elements/health/health.component.html
+++ b/src/app/widgets/elements/health/health.component.html
@@ -1,10 +1,3 @@
-<div class="top-5 end-10 position-absolute row w-1/4 gx-2" *ngIf="state && state.attributes.visibility === 'visible'">
-    <div class="col p-2 pe-1">
-        <img style="object-fit: contain;" src="/assets/images/sit-stand-achieve/heart.svg" alt="heart">
-    </div>
-    <div class="col-10 row gx-1">
-        <div class="lifelines col h-5 my-auto" [ngClass]="state.data.value <=  (state.data.total * 1/3) ? 'low' : state.data.value <= (state.data.total * 2/3) ? 'mid': 'full'" *ngFor="let life of total; let i = index">
-            <div class="life w-full h-full rounded" [class.left]="i < state.data.value"></div>
-        </div>
-    </div>
+<div class="top-5 end-10 position-absolute w-1/5 d-flex" *ngIf="state && state.attributes.visibility === 'visible'">
+    <img class="w-14 h-14 ms-2 heart" [src]="'/assets/images/sit-stand-achieve/' + (i < state.data.value ? 'heart.svg' : 'broken-heart.png')" alt="heart" [class.ms-auto]="i===0" *ngFor="let life of total; let i = index">
 </div>
