--- a/src/app/widgets/elements/goal-selection/goal-selection.component.scss
+++ b/src/app/widgets/elements/goal-selection/goal-selection.component.scss
@@ -11,7 +11,7 @@
     );
     background-size: 200% 100%;
     background-position: right;
-    span {
+    .goal-reward {
       color: #ffb000;
     }
     &:first-of-type {
