--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,5 +15,5 @@
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 
 @import './app/custom';
-@import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
-@import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+// @import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+// @import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
